--- a/crossgram/static/project.css
+++ b/crossgram/static/project.css
@@ -3,3 +3,20 @@
 div.tab-content table.dataTable {
     width: 99.5%;
 }
+
+/* Own sizes within intro */
+div.intro h1 {
+    font-size: 24.5px;
+}
+div.intro h2 {
+    font-size: 17.5px !important;
+}
+div.intro h3 {
+    font-size: 14px;
+}
+div.intro h4 {
+    font-size: 11.9px;
+}
+div.intro h5 {
+    font-size: 11.9px;
+}
